--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -35,7 +35,7 @@
       <%= f.select :location, APP_DATA['users']['cellars']['item']['location'].collect{|i| [i, i]} %>
     </div>
     <div class="required">
-      <label><span>*</span>购入价格</label>
+      <label>购入价格</label>
       <%= f.text_field :price, :class => 'text price' %>元/支
     </div>
     <div class="optional">
