--- a/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
+++ b/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
@@ -2,11 +2,11 @@
 <% @cellar_items.each_with_index do |item, index| %>
 <span>
   <%= link_to wine_path(item.wine_detail) do %>
-  <% if index > 2 %>
+  <% if index > 1 %>
   <%= wine_cover_tag(item.wine_detail, 
-      :thumb_name => :thumb, 
-      :width => 50, 
-      :height => 50) %>
+      :thumb_name => :thumb_x, 
+      :width => 100, 
+      :height => 100) %>
   <% else %>
   <%= wine_cover_tag(item.wine_detail, 
       :thumb_name => :thumb, 
