--- a/app/views/themes/waterfall/users/share/_following_wines.html.erb
+++ b/app/views/themes/waterfall/users/share/_following_wines.html.erb
@@ -4,9 +4,9 @@
   <%= link_to wine_path(wine) do %>
   <% if index > 1 %>
   <%= wine_cover_tag(wine, 
-      :thumb_name => :thumb, 
-      :width => 50, 
-      :height => 50) %>
+      :thumb_name => :thumb_x, 
+      :width => 100, 
+      :height => 100) %>
   <% else %>
   <%= wine_cover_tag(wine, 
       :thumb_name => :thumb, 
