--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -69,7 +69,7 @@
 			   	</script>
 				<% end %>
 				<div class="clear"></div>
-				<a href="javascript:void(0)" class="btn_gray"><span>加上去</span></a>
+				<a href="javascript:void(0)" class="btn_gray submit"><span>加上去</span></a>
 			</div>
 		  	<% unless @comment.commentable_type == "Photo"   %>
 		  		<%= theme_javascript_include_tag :star_rate %>
