--- a/app/assets/themes/waterfall/stylesheets/main.css
+++ b/app/assets/themes/waterfall/stylesheets/main.css
@@ -234,7 +234,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
 .tabs a span {float:none;}
 /* End IE5-Mac hack */
-.tabs a:hover {background-color:#9fc987;color:#fff;}
+.tabs a:hover, .tabs a.current {background-color:#9fc987;color:#fff;}
 .tabs .current a {background-color:#9fc987;color:#fff;}
 
 
