--- a/app/views/themes/waterfall/comments/share/_form.html.erb
+++ b/app/views/themes/waterfall/comments/share/_form.html.erb
@@ -37,6 +37,7 @@
 				<%= f.text_area :body,  :class => [:mb10, :comment_body] %>
 				<p class="text_count" style="display:none">您正在输入<span></span>个字。</p>
 			</div>
+			<span class="red text_error"></span>
 			<div class="com_s"><%= render "comments/share/comment_sns" %></div>
 		</div>
 		<div class="clear"></div>
