--- a/app/views/themes/waterfall/event_wines/new.html.erb
+++ b/app/views/themes/waterfall/event_wines/new.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 <div class="whitespace addwine">
   <h1 class="main_title">添加活动用酒</h1>
-  <div class="search mb20">
+  <div class="search mb20" id="search_input_view">
     <input name="请输入酒款名称" type="text" class="text common_search mr5" 
     value="请输入酒款名称" onclick="clearDefaultText(this,'请输入酒款名称')" />
     <a href="cellar_wine_add_year.html" class="btn_gray"><span>搜索</span></a>
@@ -26,43 +26,51 @@
     <!--end mb30-->
   </div>
   <div class="search_result_space">
+    <!--end search_result_space-->
+  </div>
+  <div class="wine_select">
+  
+    <!--end wine_select-->
+  </div>
+  <script type="text/template" id="search_wine_template">
     <div class="box_ew">
       <div class="wine_img">
-        <a href="wine_profile.html">
-          <img src="images/test/wine70.jpg" width="70" height="70" alt="wine name" />
+        <a href="<@= url @>">
+          <img src="<@= image_url @>" width="70" height="70" alt="wine name" />
         </a>
       </div>
       <div class="wine_info">
-        <h2><a href="wine_profile.html">2005 波特米勒站赤霞珠干红葡萄酒</a></h2>
-        <h3>2005 PORTER MILL STATION Cabernet Sauvignon</h3>
+        <h2><a href="<@= url @>"><@= name_zh @></a></h2>
+        <h3><@= name_en @></h3>
         <p class="year">
           已有年份：
-          <span><a href="#">2010</a></span>
+          <@ _.each(all_years, function(year){ @>
+            <span><a href="year[1]"><@= year[0] @></a></span>
+          <@ }) @>
         </p>
       </div>
       <div class="clear"></div>
     </div>
-    <!--end search_result_space-->
-  </div>
-  <div class="wine_select">
+  </script>
+  <script type="text/template" id="select_wine_template">
     <p class="notice_b mb20">已选择的活动用酒：</p>
     <dl>
       <dt>
         <a href="#">
           <span class="delet"></span>
         </a>
-        <a href="wine_profile.html">
-          <img src="images/test/wine70.jpg" width="70" height="70" alt="wine name" />
+        <a href="<@= url @>">
+          <img src="<@= image_url @>" width="70" height="70" alt="wine name" />
         </a>
       </dt>
       <dd>
-        <h2>2005 波特米勒站赤霞珠干红葡萄酒</h2>
-        <h3>2005 PORTER MILL STATION Cabernet Sauvignon</h3>
+        <h2><@= name_zh @></h2>
+        <h3><@= name_en @></h3>
       </dd>
     </dl>
     <div class="clear"></div>
-    <!--end wine_select-->
-  </div>
+  </script>
+
   <div class="btn_submit">
     <a href="add_event2.html" class="btn_bluesky_s mr10">
       <span>保存</span>
