--- a/app/views/themes/waterfall/event_wines/new.html.erb
+++ b/app/views/themes/waterfall/event_wines/new.html.erb
@@ -1,37 +1,61 @@
 <% content_for :title, @title%>
 <% content_for :js do %>
-  <%= theme_javascript_include_tag "events" %>
+  <%= theme_javascript_include_tag "events_add_wines" %>
 <% end %>
 <% content_for :css do %>
 	<%= theme_stylesheet_link_tag "event" %>
 	<%= theme_stylesheet_link_tag "add" %>
 <% end %>
 <div class="whitespace addwine">
+  <%= form_for [@event, @event_wine] do |f| -%>
+    <%= f.hidden_field :wine_detail_ids, :id => 'wine_detail_ids' %> 
+  <% end -%>
   <h1 class="main_title">添加活动用酒</h1>
   <div class="search mb20" id="search_input_view">
-    <input name="请输入酒款名称" type="text" class="text common_search mr5" 
-    value="请输入酒款名称" onclick="clearDefaultText(this,'请输入酒款名称')" />
-    <a href="cellar_wine_add_year.html" class="btn_gray"><span>搜索</span></a>
+    <input name="" type="text" class="text common_search mr5" placeholder="请输入酒款名称" />
+    <span class="loading" style="display:none">载入中......</span>
     <!--end mb20-->
   </div>
   <div class="mb30">
-    <div class="float_r">
+    <div class="float_r goto_add_wine" style="display: none">
       <span class="notice_b">这些都不是您要找的酒？</span>
       <a href="add_wine_new_detail_1.html" class="btn_gray">
         <span>添加酒款</span>
       </a>
     </div>
-    <p class="notice_b">我们为您搜寻到以下酒款</p>
-    <div class="clear"></div>
     <!--end mb30-->
   </div>
-  <div class="search_result_space">
-    <!--end search_result_space-->
+  <div id="result_container">
+
   </div>
-  <div class="wine_select">
-  
-    <!--end wine_select-->
-  </div>
+  <script type="text/template" id="search_wine_list_template">
+    <div class="search_result_space">
+      <p class="notice_b search_result_notice"  style="display: none">我们为您搜寻到以下酒款</p>
+      <div id="warning" class="red" style="display: none"></div>
+      <div class="clear"></div>
+      <div class="wines">
+      </div>
+      <!--end wine_select-->
+    </div>
+  </script>
+
+  <script type="text/template" id="select_wine_list_template">
+    <div class="wine_select_container">
+      <p class="notice_b mb20">已选择的活动用酒：</p>
+      <div class="wines">您还没有选择活动用酒</div>
+      <div class="btn_submit " style="display: none" >
+        <a href="javascript:void(0)" class="btn_bluesky_s mr10 save_button">
+          <span>保存</span>
+        </a>
+        <%= link_to edit_event_path(@event), :class => :btn_gray_b  do %>
+          <span>取消</span>
+        <% end %>
+      </div>
+      <!--end search_result_space-->
+    </div>
+  </script>
+
+
   <script type="text/template" id="search_wine_template">
     <div class="box_ew">
       <div class="wine_img">
@@ -40,12 +64,12 @@
         </a>
       </div>
       <div class="wine_info">
-        <h2><a href="<@= url @>"><@= name_zh @></a></h2>
-        <h3><@= name_en @></h3>
+        <h2><a href="<@= url @>"><@= year @><@= name_zh @></a><span class="warning"></span></h2>
+        <h3><@= year @><@= origin_name @></h3>
         <p class="year">
           已有年份：
           <@ _.each(all_years, function(year){ @>
-            <span><a href="year[1]"><@= year[0] @></a></span>
+            <span ><a class="select" data-value=<@= year[2] @> href="javascript:void(0)"><@= year[0] @></a></span>
           <@ }) @>
         </p>
       </div>
@@ -53,30 +77,26 @@
     </div>
   </script>
   <script type="text/template" id="select_wine_template">
-    <p class="notice_b mb20">已选择的活动用酒：</p>
+  <div class="wine_select">
     <dl>
       <dt>
         <a href="#">
-          <span class="delet"></span>
+          <span class="delet remove"></span>
         </a>
         <a href="<@= url @>">
           <img src="<@= image_url @>" width="70" height="70" alt="wine name" />
         </a>
       </dt>
       <dd>
-        <h2><@= name_zh @></h2>
-        <h3><@= name_en @></h3>
+        <h2><@= year @><@= name_zh @></h2>
+        <h3><@= year @><@= origin_name @></h3>
       </dd>
     </dl>
     <div class="clear"></div>
+  </div>
   </script>
 
-  <div class="btn_submit">
-    <a href="add_event2.html" class="btn_bluesky_s mr10">
-      <span>保存</span>
-    </a>
-    <a href="add_event.html" class="btn_gray_b"><span>取消</span></a>
-  </div>
+  
   <!--end whitespace-->
 </div>
 
