--- a/public/template/index.html
+++ b/public/template/index.html
@@ -107,6 +107,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     </div>
     <div id="home">
     	<div class="iw">
+        	<div class="action clearfix">
+            	<a class="btn_iw hc"><span><em>评论</em></span></a>
+                <a class="btn_iw hf"><span><em>关注</em></span></a>
+                <a class="btn_iw hs"><span><em>分享</em></span></a>
+            </div>
         	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
@@ -157,10 +162,13 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </li>
                 </ul>
             </div>
-            <div class="iw_more"><a href="#">共7条评论</a></div>
+            <div class="iw_comment clearfix">
+            	<div class="left"><a href="#"><img src="images/test/user_30_2.jpg" width="30" height="30" alt="username" /></a></div>
+                <div class="right"><input name="" type="text" /><a class="btn_gray" href="#"><span>添加评论</span></a></div>
+            </div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_2.jpg" width="200" height="150" /></a></div>
+   	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_2.jpg" width="200" height="150" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -181,7 +189,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="iw_more"><a href="#">去看看这个活动</a></div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/wine150.jpg" width="100" height="372" /></a></div>
+   	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/wine150.jpg" width="100" height="372" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -198,9 +206,13 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 </ul>
             </div>
             <div class="iw_more"><a href="#">去看看他的酒窖</a></div>
+            <div class="iw_comment clearfix">
+            	<div class="left"><a href="#"><img src="images/test/user_30_2.jpg" width="30" height="30" alt="username" /></a></div>
+                <div class="right"><input name="" type="text" /><a class="btn_gray" href="#"><span>添加评论</span></a></div>
+            </div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_4.jpg" width="200" height="300" /></a></div>
+   	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_4.jpg" width="200" height="300" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -226,7 +238,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
       </div>
       
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_4.jpg" width="200" height="300" /></a></div>
+   	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_4.jpg" width="200" height="300" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -245,7 +257,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="iw_more"><a href="#">查看更多照片</a></div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_5.jpg" width="200" height="345" /></a></div>
+   	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_5.jpg" width="200" height="345" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -265,7 +277,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="iw_more"><a href="#">查看完整品酒辞</a></div>
       </div>
       <div class="iw">
-      	<div class="iw_user">
+   	  <div class="iw_user">
         	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
             <div class="right">
                 <p class="username"><a href="#">我就是秀秀</a></p>
@@ -284,7 +296,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="iw_more"><a href="#">查看完整品酒辞</a></div>
       </div>
       <div class="iw">
-      	<div class="iw_user">
+   	  <div class="iw_user">
         	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
             <div class="right">
                 <p class="username"><a href="#">我就是秀秀</a></p>
@@ -311,7 +323,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </div>
       </div>
       <div class="iw">
-      	<div class="iw_user">
+   	  <div class="iw_user">
         	<div class="left"><a href="#"><img src="images/test/user_30.jpg" width="30" height="30" alt="username" /></a></div>
             <div class="right">
                 <p class="username"><a href="#">我就是秀秀</a></p>
