--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -6,21 +6,34 @@
     <div class="content">
       <div class="left">
         <div class="title_btn">
-           <h1>粉丝 <span class="font12 more">(共<%= @user.followers_count %>个...)</span></h1>
+          <h1>粉丝 <span class="font12 more">(共<%= @user.followers_count %>个...)</span></h1>
         </div>
-          <%= render "users/share/user_followers" %>
+        <%= render "users/share/user_followers" %>
         <div class="pagination">
-         <%= paginate @followers, :outer_window => 2 %> 
+          <%= paginate @followers, :outer_window => 2 %>
           <!-- pagination  end   -->
-        </div>      
-      </div>
-      <div class="right">
-        <div class="sidebox">
-          <div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
-          <div class="main">
-             <%= render "users/share/recommend_users" %>
-          </div>
         </div>
+      </div>
+
+      <div class="right">
+        <% if @recommend_users.present? %>
+            <div class="sidebox">
+              <div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
+              <div class="main">
+                <%= render "users/share/recommend_users" %>
+              </div>
+            </div>
+        <% end %>
+
+        <% if user_signed_in? && @recommend_from_sns.present? %>
+            <div class="sidebox">
+              <div class="title"><h3>或许你会认识TA们...</h3></div>
+              <div class="main">
+                <%= render "users/share/recommend_sns_user" %>
+              </div>
+            </div>
+        <% end  %>
+
       </div>
       <div class="clear"></div>
     </div>
