--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -24,12 +24,24 @@
         </div>      
       </div>
       <div class="right">
-        <div class="sidebox">
-          <div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
-          <div class="main">
-             <%= render "users/share/recommend_users" %>
-          </div>
-        </div>
+        <% if @recommend_users.present? %>
+            <div class="sidebox">
+              <div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
+              <div class="main">
+                <%= render "users/share/recommend_users" %>
+              </div>
+            </div>
+        <% end %>
+
+        <% if user_signed_in? && @recommend_from_sns.present?  %>
+            <div class="sidebox">
+              <div class="title"><h3>或许你会认识TA们...</h3></div>
+              <div class="main">
+                <%= render "users/share/recommend_sns_user" %>
+              </div>
+            </div>
+        <% end  %>
+
       </div>
       <div class="clear"></div>
     </div>
